Bulk commit